--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^9.1.3",
+    "history": "4.7.2",
     "moment": "2.18.1",
     "node-sass": "5.0.0",
     "normalize.css": "7.0.0",
